tests/tools/tests/tools/snapshots/tools__repository__snapshot__state_is_a_stable_visual_snapshot_sha1.snap
---
source: tests/tools/tests/tools/repository.rs
expression: "gix_testtools::repository::snapshot(fixture.path())?"
---
HEAD refs/heads/main -> C0

[config]
[core]
	bare = false

[refs]
refs/heads/main = C0
refs/heads/side = C1

[commits]
C0
  tree T0
  author author <author@example.com> 946684800 +0000
  committer committer <committer@example.com> 946684800 +0000

  base

C1
  tree T0
  parent C0
  author author <author@example.com> 946684800 +0000
  committer committer <committer@example.com> 946771200 +0000

  detached

[index]
tree = conflicted
100644 B0 stage=1 "conflicted"
100644 B1 stage=2 "conflicted"
100644 B2 stage=3 "conflicted"
100644 B3 stage=0 "nested/deep/tracked"
100644 B4 stage=0 "staged"
100644 B5 stage=0 "tracked"

[worktree]
040755 dir  "nested"
040755 dir  "nested/deep"
100644 file "nested/deep/tracked" = "nested\n"
100644 file "staged" = "staged\n"
100644 file "tracked" = "base\n"
100644 file "untracked" = "untracked\n"

[objects]
B2 = 10139f32e901e2e58f0c7ea252b806b6826c1dc2
B0 = 1178fd6a7c4ba7efdceee22f242f34056d890164
B4 = 19d9cc8584ac2c7dcf57d2680375e80f099dc481
B1 = 549d5b409232ef9c1aacdbdb5ae737ed301a1f25
B3 = 79c53955ef856f16f2107446bc721c8879a1bd2e
T0 = dac951ef2c0b523c76a0dd9f529efd0455d903f7
B5 = df967b96a579e45a18b8251732d16804b2e56a55
C0 = dfe1d97968bac924f8885323b54248686e751745
C1 = f98c44f360e577f428fa3746e8177cceeaad9aeb
